--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     build: ./ui
     image: ${USERNAME}/ui:${UI_APP_IMAGE_VER}
     ports:
-      - ${PORT_PUMA}:${PORT_PUMA}/tcp
+      - ${PORT_PUMA}:9292/tcp
     networks:
       - front_net
   post:
@@ -23,7 +23,7 @@ services:
       - front_net
       - back_net
   comment:
-    build: ./ui
+    build: ./comment
     image: ${USERNAME}/comment:${COMMENT_APP_IMAGE_VER}
     networks:
       - front_net
