--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,14 @@ services:
     networks:
       - back_net
 
+  mongodb-exporter:
+    image: ${MONGO_EXPORTER_SRC}/mongodb_exporter:${MONGO_EXPORTER_VER}
+    environment:
+      - MONGODB_URL=mongodb://mongo_db:27017
+    networks:
+      - back_net
+
+
 volumes:
   post_db:
 
