Add dev namespace.

--- a/kubernetes/ui-deployment.yml
+++ b/kubernetes/ui-deployment.yml
@@ -21,3 +21,8 @@ spec:
       containers:
       - image: veffhz/ui
         name: ui
+        env:
+        - name: ENV
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
