--- a/kubernetes/charts/prometheus/custom_values.yml
+++ b/kubernetes/charts/prometheus/custom_values.yml
@@ -821,6 +821,11 @@ serverFiles:
           - action: labelmap
             regex: __meta_kubernetes_service_label_(.+)
           - source_labels: [__meta_kubernetes_namespace]
+            regex: (staging|production)
+            replacement: endpoint
+            target_label: kubernetes_namespace
+          - source_labels: [__meta_kubernetes_namespace]
+            regex: (default)
             target_label: kubernetes_namespace
           - source_labels: [__meta_kubernetes_service_name]
             target_label: kubernetes_name
@@ -839,6 +844,11 @@ serverFiles:
           - action: labelmap
             regex: __meta_kubernetes_service_label_(.+)
           - source_labels: [__meta_kubernetes_namespace]
+            regex: (staging|production)
+            replacement: endpoint
+            target_label: kubernetes_namespace
+          - source_labels: [__meta_kubernetes_namespace]
+            regex: (default)
             target_label: kubernetes_namespace
           - source_labels: [__meta_kubernetes_service_name]
             target_label: kubernetes_name
@@ -857,6 +867,11 @@ serverFiles:
           - action: labelmap
             regex: __meta_kubernetes_service_label_(.+)
           - source_labels: [__meta_kubernetes_namespace]
+            regex: (staging|production)
+            replacement: endpoint
+            target_label: kubernetes_namespace
+          - source_labels: [__meta_kubernetes_namespace]
+            regex: (default)
             target_label: kubernetes_namespace
           - source_labels: [__meta_kubernetes_service_name]
             target_label: kubernetes_name
@@ -873,7 +888,7 @@ serverFiles:
             regex: __meta_kubernetes_service_label_(.+)
           - source_labels: [__meta_kubernetes_service_label_app, __meta_kubernetes_namespace]
             action: keep
-            regex: reddit;(production|staging)+
+            regex: reddit;(staging)+
           - source_labels: [__meta_kubernetes_namespace]
             target_label: kubernetes_namespace
           - source_labels: [__meta_kubernetes_service_name]
@@ -891,7 +906,7 @@ serverFiles:
             regex: __meta_kubernetes_service_label_(.+)
           - source_labels: [__meta_kubernetes_service_label_app, __meta_kubernetes_namespace]
             action: keep
-            regex: reddit;(production|staging)+
+            regex: reddit;(production)+
           - source_labels: [__meta_kubernetes_namespace]
             target_label: kubernetes_namespace
           - source_labels: [__meta_kubernetes_service_name]
